<resources>
    <string name="app_name">Mission Memorize</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="projects">Projects</string>
    <string name="add_new_project">+ Project</string>
    <string name="folders">Folders</string>
    <string name="add_new_folder">+ Folder</string>
    <string name="reference">Reference</string>
    <string name="body">Body</string>
    <string name="reveal">Reveal</string>
    <string name="difficulty">Difficulty:</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="folder_name">Folder Name</string>
    <string name="input_references">List References</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try Again</string>
    <string name="back_to_home">Back to Home</string>
</resources>
