<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="35dp"
            android:paddingVertical="60dp"
            >

            <TextView
                android:id="@+id/projectsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/projects"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/projectsRecyclerView"/>


            <Button
                android:id="@+id/addNewProjectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_project"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/projectsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addNewProjectButton"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/foldersTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/folders"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/projectsRecyclerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/foldersRecyclerView"/>

            <Button
                android:id="@+id/addNewFolderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_folder"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/projectsRecyclerView"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/foldersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addNewFolderButton"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>